# notorious

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  model.dvc  pyproject.toml
.dvc/: config
config/: main.yaml
config/process/: adjust_ait.yaml  collect_trend.yaml  create_ri_for_regression.yaml  return_ri_rj.yaml  trend_search.yaml
data/: .gitignore  db.dvc  gtab_res.dvc  preprocess.dvc  processed.dvc  raw.dvc
data/db/: WiredTiger.turtle  WiredTiger.wt  _mdb_catalog.wt  collection-0-5597054251496263122.wt  collection-0-808539192279675586.wt  collection-2-808539192279675586.wt  collection-4-5597054251496263122.wt  collection-4-808539192279675586.wt  collection-7-808539192279675586.wt  index-1-5597054251496263122.wt  index-1-808539192279675586.wt  index-3-808539192279675586.wt  index-5-5597054251496263122.wt  index-5-808539192279675586.wt  index-6-808539192279675586.wt  index-8-808539192279675586.wt  index-9-808539192279675586.wt  sizeStorer.wt
data/db/.mongodb/mongosh/: 65c59ad76347e8a07fb4ba98_log  65c59ad78a6ff61de9d8d276_log  65c59ad89ce0663b56d6287c_log  config
data/db/diagnostic.data/: metrics.2024-02-09T03-24-07Z-00000  metrics.2024-02-09T03-24-11Z-00000  metrics.interim
data/gtab_res/Me Too/worldwide_['2016-01-01', '2018-07-31']/: Asia Argento "Me Too".csv  Aziz Ansari "Me Too".csv  Ben Affleck "Me Too".csv  Boyd Tinsley "Me Too".csv  Brett Kavanaugh "Me Too".csv  Brett Ratner "Me Too".csv  Bryan Singer "Me Too".csv  Cristina Garcia "Me Too".csv  Donald Trump "Me Too".csv  (+5 more)
data/raw/: predator_list.txt  s.csv  victim_list.txt
docs/: conf.py
env/: check_result.txt  headers.json  invalid_keyword.txt  no_result.txt  valid_result.txt
gtab_config/config/: config_cl.json
gtab_config/logs/: log_geo=_timeframe=2016-01-01 2018-07-31.txt  log_geo=_timeframe=2016-01-01 2018-12-31.txt  log_geo=_timeframe=2016-06-01 2018-12-31.txt  log_geo=_timeframe=2018-01-01 2018-07-31.txt  log_geo=_timeframe=2018-08-01 2018-12-31.txt  log_geo=_timeframe=2019-01-01 2020-08-01.txt
gtab_config/output/google_anchorbanks/: google_anchorbank_geo=_timeframe=2016-01-01 2018-07-31.tsv  google_anchorbank_geo=_timeframe=2016-06-01 2018-12-31.tsv  google_anchorbank_geo=_timeframe=2018-08-01 2018-12-31.tsv
ncls/: __init__.py
ncls/process/: __init__.py  merge.py  negative_search.py  reg.py  trend_search.py  utils.py
ncls/process/gtab/: core.py
notebooks/: Untitled.ipynb  adjust_ait.ipynb  check.ipynb  check_ri.ipynb  create_ri_for_regression.ipynb  demo.ipynb  inspect_outlier.ipynb  rerun_ri_rj.ipynb
report/src/: fonts.tex
script/: adjust_ait.py  create_anchorbank.sh  create_ri_for_regression.py  gtab_query.sh  return_ri_rj.py
scripts/: adjust_ait.py  collect_trend.py  create_anchorbanks.py  create_ri_for_regression.py  return_ri_rj.py  trend_search.py
src/data/: collect_trend.py  negative_search.py  trend_search.py  utils.py
src/data/gtab/: core.py
src/process/: __init__.py  adjust_ait.py  trend_search.py
tests/data/: test_trend_search.py
tests/process/: test_trend_search.py
(+38 files in other folders)
