[tool.poetry]
name = "ncls"
version = "0.1.0"
description = ""
authors = ["githubjacky"]

[tool.poetry.dependencies]
python = "^3.9"
hydra-core = "^1.1.1"
pdoc3 = "^0.10.0"
python-dotenv = "^1.0.0"
loguru = "^0.7.0"
orjson = "^3.9.4"
tqdm = "^4.66.1"
pandas = "==1.*"
keyphrase-vectorizers = "^0.0.11"
torch = ">=2.0.0, !=2.0.1"
spacy = "^3.6.1"
pipe = "^2.1"


[tool.poetry.group.data.dependencies]
urllib3 = "==1.*"
networkx = ">=2.4"
openpyxl = "^3.1.2"
pytrends = ">=4.7.2"
keybert = "^0.7.0"
httpx = "^0.25.0"
googlesearch-python = "^1.2.3"
flair = "^0.12.2"
selectolax = "^0.3.16"


[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pre-commit = "^2.17.0"
ipykernel = "^6.25.0"
jupyterlab = "^4.0.5"
poetry-kernel = "^0.1.3"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["E501"]
select = ["B","C","E","F","W","B9", "I", "Q"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88

[tool.ruff.mccabe]
max-complexity = 10
